--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Premium Multipurpose Admin & Dashboard Template"
+    <meta content="Premium Tubing Products & Services"
       name="description" />
-    <meta content="Themesbrand" name="author" />
+    <meta content="Insulation Products Corporation" name="author" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Velzon - React Admin & Dashboard Template</title>
+    <title>Insulation Products Corporation - Heat Shrink Tubing & Non-Shrink Tubing</title>
   </head>
 
   <body>
