--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
     <meta http-equiv="refresh" content="0; URL=/" />
   </head>
   <body>
-    <p>If you are not redirected, <a href="/">click here</a>.</p>
+    <p>If you are not redirected, <a href="/IPC/">click here</a>.</p>
   </body>
 </html>
